Refactor JarClassLoaderService and MavenArtifactDiscoveryService for improved dependency injection and error handling
- Added an empty constructor to JarClassLoaderService for HK2 dependency injection.
- Modified getAllClasses method to handle uninitialized ArtifactDiscoveryService gracefully.
- Enhanced MavenArtifactDiscoveryService to check for existing artifact files before attempting to download from Maven.
- Improved error logging and handling in artifact discovery process.
- Updated method signatures and formatting for better readability.